--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,6 +1,6 @@
 ######################## default configuration ####################
-baseURL = "https://demo.gethugothemes.com/andromeda-light/site/"
-title = "Andromeda-light - Software and SAAS Landing Hugo Theme"
+baseURL = "https://taghub.ml"
+title = "TagHubML - Next gen AI solutions for data exploration and labeling"
 theme = "andromeda-light"
 # post pagination
 paginate = "6"
