--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -13,7 +13,7 @@ author = "Themefisher"
 image = "images/logo.png"                # this image will be used as fallback if a page has no image of its own
 
 # footer information
-footer_info = "Lorem ipsum dolor sit sed dmi amet, consectetur adipiscing. Cdo tellus, sed condimentum volutpat."
+footer_info = "Next gen AI solutions for data exploration and labeling"
 
 # contact form action
 contact_form_action = "https://formspree.io/f/xgernlzd" # contact form works with https://formspree.io
@@ -25,7 +25,7 @@ copyright = "Designed By [Themefisher](https://themefisher.com/) & Developed By 
 custom_script = ""
 
 # buy premium popup
-buy_premium_popup = true
+buy_premium_popup = false 
 
 # Main Sections
 mainSections = ["blog"]
@@ -35,9 +35,9 @@ reading_time = true
 
 # contact information
 [contact_info]
-address = "2118 Thornridge Cir. Syracuse, Connecticut 35624"
-phone = ["+704-555-0127", "+205-857-2321", "+002-569-6969"]
-email = ["info@andromeda.io", "smith@anderson.io", "john@anderson.io"]
+address = "Ho Chi Minh City, Vietnam"
+phone = []
+email = ["patrick@taghub.dev"]
 
 # imaging processing
 [imaging]
@@ -72,21 +72,21 @@ button_link = "https://gethugothemes.com/products/andromeda/"
 
 ############################# social site ########################
 [[social]]
-title = "Andromeda"
+title = "Facebook"
 icon = "lab la-facebook-f" # https://icons8.com/line-awesome
-link = "#!"
+link = "https://www.facebook.com/taghub.dev"
+
+# [[social]]
+# title = "AndromedaTweet"
+# icon = "lab la-twitter"  # https://icons8.com/line-awesome
+# link = "#!"
 
 [[social]]
-title = "AndromedaTweet"
-icon = "lab la-twitter"  # https://icons8.com/line-awesome
-link = "#!"
-
-[[social]]
-title = "AndromedaIn"
+title = "Linkedin"
 icon = "lab la-linkedin-in" # https://icons8.com/line-awesome
-link = "#!"
+link = "https://www.linkedin.com/company/taghubml/"
 
-[[social]]
-title = "AndromedaPin"
-icon = "lab la-pinterest" # https://icons8.com/line-awesome
-link = "#!"
+# [[social]]
+# title = "AndromedaPin"
+# icon = "lab la-pinterest" # https://icons8.com/line-awesome
+# link = "#!"
